# camaro-sdk

./: .gitignore  CMakeLists.txt  sys_config.h.in  v4l2_config.h.in
Common/: camaro.profile.json  camaro.xdl.json  movidius.profile.json
Common/Include/: .gitignore  BufferQueue.h  Camaro.h  CamaroDual.h  CamaroISP.h  CamaroMovidius.h  CameraBase.h  CameraComboBase.h  CameraProfile.h  CameraSoloBase.h  Configuration.h  DGExtensionFilter.h  DeepCamAPI.h  DeviceDecorator.h  EtronExtensionFilter.h  ExtensionAccessAdapter.h  ExtensionInfo.h  ExtensionRepository.h  ExtensionVCDevice.h  FileSource.h  FlyCaptureDevice.h  FlyCaptureReader.h  Fovea.h  GenericVCDevice.h  ICameraControl.h  ICameraFactory.h  IDeviceControl.h  IDeviceFactory.h  IDiscernible.h  IExtensionAccess.h  IExtensionLite.h  IGenericVCDevice.h  IIrisControl.h  ILowlevelControl.h  IMobile.h  IMultiVideoSource.h  IMultiVideoStream.h  IProcessable.h  IProcessor.h  ISource.h  (+24 more)
Common/Include/spdlog/details/: format.h
Common/Source/: Camaro.cpp  CamaroDual.cpp  CamaroISP.cpp  CamaroMovidius.cpp  CameraProfile.cpp  Configuration.cpp  DGExtensionFilter.cpp  DeepCamAPI.cpp  ExtensionRepository.cpp  FileSource.cpp  FlyCaptureDevice.cpp  FlyCaptureReader.cpp  Fovea.cpp  IProcessor.cpp  ImageSequence.cpp  ImpalaE.cpp  Logger.cpp  PointGrey.cpp  RetrievalMap.cpp  VideoFormat.cpp  VideoSource.cpp  VideoSourceProxy.cpp  flycapturedevice.cpp  flycapturereader.cpp  pointgrey.cpp
Common/Toolbox/: ImageAnalysis.cpp  ImageAnalysis.h
Common/Toolbox/ChessboardMaker/: Chessboard.qml  ChessboardMaker.pro  MainForm.ui.qml  cbLogic.js  geometryhelper.cpp  geometryhelper.h  main.cpp  main.qml  qml.qrc  rcserver.cpp  rcserver.h
Common/Toolbox/StereoCalibration/: StereoCalibration.pro  StereoCalibration.vcxproj.filters  echoclient.cpp  echoclient.h  stereocalibration.cpp  stereocalibration.h  stereocalibration.ui
Linux/Include/: .gitignore  CameraFactory.h  DGExtensionFilter.h  DeviceFactory.h  ExtensionAccess.h  ExtensionFilterBase.h  GeneralExtensionFilter.h  GenericVCDevice.h  ILExtensionLite.h  ILSource.h  LSource.h  StandardUVCFilter.h  VideoBufferLock.h  VideoSourceReader.h  v4l2helper.h
Linux/Source/: CameraFactory.cpp  DGExtensionFilter.cpp  DeepCamAPI.cpp  DeviceFactory.cpp  ExtensionAccess.cpp  ExtensionFilterBase.cpp  GeneralExtensionFilter.cpp  GenericVCDevice.cpp  StandardUVCFilter.cpp  VideoSourceReader.cpp  v4l2helper.cpp
Linux/apitest/: FrameRateCounter.cpp  FrameRateCounter.h  apitest.pro  bayer.cpp  main.cpp  processimage.cpp  processimage.h
Linux/camaroapi/: camaroapi.pro
Linux/stereoview/: buffer_manager.h  convert_to_i420.cpp  convert_to_i420.h  main.cpp  msgq.h  processimage.cpp  processimage.h  recmgr.c  recmgr.h  stereoview.pro
Linux/stereoview/SDL/include/: SDL.h
Windows/Camaro API/: Camaro API.sln
Windows/Camaro API/ApiDynamicTest/: ApiDynamicTest.cpp  ApiDynamicTest.vcxproj  ApiDynamicTest.vcxproj.filters  ReadMe.txt  stdafx.cpp
Windows/Camaro API/ApiTest/: ApiTest.cpp  ApiTest.vcxproj
Windows/Camaro API/CamView/: CamView.pri  CamView.pro  CamView.vcxproj  CamView.vcxproj.filters
Windows/Camaro API/DynamicAPILib/: CamaroAPI.cpp  CamaroAPI.h  DynamicAPILib.vcxproj  DynamicAPILib.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
Windows/Camaro API/StaticAPILib/: ReadMe.txt  StaticAPILib.vcxproj  StaticAPILib.vcxproj.filters  stdafx.cpp  stdafx.h
Windows/Camaro API/StereoCalibration/: StereoCalibration.vcxproj  stereocalibration.cpp  stereocalibration.h  stereocalibration.qrc  stereocalibration.ui
Windows/Include/: CameraFactory.h  DGExtensionFilter.h  DeviceFactory.h  EtronExtensionFilter.h  ExtensionAccess.h  ExtensionFilterBase.h  ExtensionUnit.h  ExtensionVCDevice.h  GeneralExtensionFilter.h  GenericVCDevice.h  IExtensionUnit.h  IMExtensionLite.h  IMSource.h  MFHelper.h  MSource.h  SourceDecorator.h  StandardUVCFilter.h  StandardVCDevice.h  System.h  VideoBufferLock.h  VideoSourceReader.h
Windows/Source/: CameraFactory.cpp  DGExtensionFilter.cpp  DeepCamAPI.cpp  DeviceFactory.cpp  ExtensionAccess.cpp  ExtensionFilterBase.cpp  ExtensionUnit.cpp  GeneralExtensionFilter.cpp  GenericVCDevice.cpp  MFHelper.cpp  StandardUVCFilter.cpp  VideoSourceReader.cpp
Windows/UVCPlugin/: ReadMe.txt  Resource.h  UVCPlugin.cpp  UVCPlugin.def  UVCPlugin.idl  UVCPlugin.rc  UVCPlugin.rgs  UVCPlugin.vcxproj  UVCPlugin.vcxproj.filters  UVCPluginPS.vcxproj  UVCPluginPS.vcxproj.filters  Xuproxy.cpp  Xuproxy.h  dllmain.cpp  dllmain.h  stdafx.cpp
